# priyut_luchshiy_drug

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
.cursor/rules/: clean-code.mdc  commands.mdc  context7.mdc
backend/: AUTH_ARCHITECTURE.md  config.py  logger.py
backend/api/: __init__.py  app.py
backend/api/dependencies/: __init__.py  auth.py  container.py  request_info.py
backend/api/middleware/: exception_handler.py
backend/api/routes/: __init__.py  auth.py  auth_example.py  pets.py  uploads.py  users.py
backend/api/schemas/: __init__.py
backend/application/: __init__.py
backend/application/repositories/: __init__.py  pet_repository.py  session_repository.py  user_repository.py
backend/application/services/: __init__.py  file_storage.py
backend/application/use_cases/: __init__.py  auth_login.py  auth_refresh.py  auth_verify.py  delete_image.py  get_image.py  pet_create.py  pet_delete.py  pet_detail.py  pet_list.py  pet_update.py  upload_image.py
backend/domain/: __init__.py
backend/domain/entities/: __init__.py  pet.py  session.py  user.py
backend/domain/enums/: __init__.py  animal_type.py  gender.py  pet_group.py  pet_status.py
backend/domain/exceptions/: __init__.py  auth_exceptions.py
backend/infrastructure/: __init__.py
backend/scripts/: __init__.py  create_admin_user.py  seed_pets_with_images.py
frontend/: .env.example  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/data/: generated-page.html
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/admin/: core.ts  (+5 more)
(+27 files in other folders)
