[project]
name = "priyut-luchshiy-drug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "beanie>=2.0.1",
    "fastapi>=0.128.8",
    "motor>=3.7.1",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
]
